force-app/main/default/objects/Lead/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Referrer</fullName>
            </value>
            <value>
                <fullName>Channel Agreement</fullName>
            </value>
            <value>
                <fullName>Service Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>