force-app/main/default/objects/Lead/fields/Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue__c</fullName>
    <label>Annual Revenue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>$0-5m</fullName>
            </value>
            <value>
                <fullName>$5m-10m</fullName>
            </value>
            <value>
                <fullName>$10m-20m</fullName>
            </value>
            <value>
                <fullName>$20m or more</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>