force-app/main/default/objects/Lead/fields/Attainable_TTV_monthly__c.field-meta.xml
<CustomField>
    <fullName>Attainable_TTV_monthly__c</fullName>
    <label>Potential GDV (Monthly)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>