force-app/main/default/objects/Lead/fields/Bus_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Bus_Address_Line_1__c</fullName>
    <label>Bus Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>