force-app/main/default/objects/Lead/fields/Bus_City__c.field-meta.xml
<CustomField>
    <fullName>Bus_City__c</fullName>
    <label>Bus City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>