force-app/main/default/objects/Lead/fields/Bus_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Bus_Postcode__c</fullName>
    <label>Bus Postcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>