force-app/main/default/objects/Lead/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Account_Type__c</field>
            <operation>equals</operation>
            <value>Channel Agreement</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Channel)</relationshipLabel>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>