force-app/main/default/objects/Lead/fields/Channel_ECN__c.field-meta.xml
<CustomField>
    <fullName>Channel_ECN__c</fullName>
    <formula>Channel__r.ECN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel ECN</label>
    <type>Text</type>
</CustomField>