force-app/main/default/objects/Lead/fields/Converted_Contact__c.field-meta.xml
<CustomField>
    <fullName>Converted_Contact__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Converted_Contact</label>
    <type>Checkbox</type>
</CustomField>