force-app/main/default/objects/Lead/fields/Converted_from_Account__c.field-meta.xml
<CustomField>
    <fullName>Converted_from_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted from Account</label>
    <type>Checkbox</type>
</CustomField>