force-app/main/default/objects/Lead/fields/Customer_Sector__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sector__c</fullName>
    <label>Customer Sector</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Airline</fullName>
            </value>
            <value>
                <fullName>Consolidator</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>TMC</fullName>
            </value>
            <value>
                <fullName>Wholesaler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>