force-app/main/default/objects/Lead/fields/eNett_Products__c.field-meta.xml
<CustomField>
    <fullName>eNett_Products__c</fullName>
    <label>eNett Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VANs</fullName>
                <default>true</default>
                <label>VANs</label>
            </value>
            <value>
                <fullName>eNett EFT</fullName>
            </value>
            <value>
                <fullName>feeNett</fullName>
            </value>
            <value>
                <fullName>Virtual Terminal</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>