force-app/main/default/objects/Lead/fields/estimated_ttv_other__c.field-meta.xml
<CustomField>
    <fullName>estimated_ttv_other__c</fullName>
    <label>Estimated TTV Other (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>