force-app/main/default/objects/Lead/fields/Expected_GDV__c.field-meta.xml
<CustomField>
    <fullName>Expected_GDV__c</fullName>
    <inlineHelpText>The total estimated GDV that a prospective customer will transact in this calendar year.</inlineHelpText>
    <label>Expected Monthly GDV</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>