force-app/main/default/objects/Lead/fields/External_Registration_URL__c.field-meta.xml
<CustomField>
    <fullName>External_Registration_URL__c</fullName>
    <description>Deprecated - Must not be used</description>
    <formula>IF( ISBLANK(Reference_Registration__c) , &#39;&#39;, $Setup.RegoSettings__c.sfdcHostName__c + &#39;?Id=&#39; + Reference_Registration__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
     <inlineHelpText>Deprecated - Must not be used</inlineHelpText>
    <label>External Registration URL</label>
    <type>Text</type>
</CustomField>