force-app/main/default/objects/Lead/fields/External_Registration_URL_Signoff_Page__c.field-meta.xml
<CustomField>
    <fullName>External_Registration_URL_Signoff_Page__c</fullName>
    <description>Deprecated - Must not be used</description>
    <formula>IF(ISBLANK(Reference_Registration__c) , &#39;&#39;, &#39;https://&#39; + $Setup.RegoSettings__c.sfdcHostName__c + &#39;?Id=&#39; + Reference_Registration__c + &#39;&amp;step=TandC&#39;)</formula>
    <inlineHelpText>Deprecated - Must not be used</inlineHelpText>
    <label>External Registration URL Signoff Page</label>
    <type>Text</type>
</CustomField>