force-app/main/default/objects/Lead/fields/GDPR_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is true when a lead has opted in for receiving eNett communications</description>
    <inlineHelpText>This is true when a lead has opted in for receiving eNett communications</inlineHelpText>
    <label>Prospect/ Lead Opt-In</label>
    <type>Checkbox</type>
</CustomField>