force-app/main/default/objects/Lead/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <label>Job Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Business Owner/Proprietor</fullName>
            </value>
            <value>
                <fullName>Chairperson</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>CFO</fullName>
            </value>
            <value>
                <fullName>CIO</fullName>
            </value>
            <value>
                <fullName>CMO</fullName>
            </value>
            <value>
                <fullName>COO</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Managing Director</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Travel Consultant</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>