force-app/main/default/objects/Lead/fields/Lead_Notes_History__c.field-meta.xml
<CustomField>
    <fullName>Lead_Notes_History__c</fullName>
    <label>Lead Notes History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>