force-app/main/default/objects/Lead/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <formula>Company</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Name</label>
    <type>Text</type>
</CustomField>