force-app/main/default/objects/Lead/fields/Payment_Challenges__c.field-meta.xml
<CustomField>
    <fullName>Payment_Challenges__c</fullName>
    <label>Payment Challenges</label>
    <type>TextArea</type>
</CustomField>