force-app/main/default/objects/Lead/fields/Potential_Date_for_Contract__c.field-meta.xml
<CustomField>
    <fullName>Potential_Date_for_Contract__c</fullName>
    <inlineHelpText>What is a potential date for contracting this lead?</inlineHelpText>
    <label>Potential Date for Contract</label>
    <type>Date</type>
</CustomField>