force-app/main/default/objects/Lead/fields/Potential_GDV__c.field-meta.xml
<CustomField>
    <fullName>Potential_GDV__c</fullName>
    <inlineHelpText>An estimate of total virtual card wallet size for a prospective customer; potential GDV will define which Customer Tier they fall into.</inlineHelpText>
    <label>Potential Monthly GDV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>