force-app/main/default/objects/Lead/fields/Reference_Registration__c.field-meta.xml
<CustomField>
    <fullName>Reference_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Registration</label>
    <referenceTo>Registration__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>