force-app/main/default/objects/Lead/fields/Referral_notes__c.field-meta.xml
<CustomField>
    <fullName>Referral_notes__c</fullName>
    <label>Referral Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>