force-app/main/default/objects/Lead/fields/Referrer_Contact_name__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Contact_name__c</fullName>
    <label>Referrer - Contact Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>