force-app/main/default/objects/Lead/fields/Referrer_Contact_title__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Contact_title__c</fullName>
    <label>Referrer - Contact Title</label>
    <length>200</length>
    <type>Text</type>
</CustomField>