force-app/main/default/objects/Lead/fields/Referrer_ECN__c.field-meta.xml
<CustomField>
    <fullName>Referrer_ECN__c</fullName>
    <formula>Referrer__r.ECN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referrer ECN</label>
    <type>Text</type>
</CustomField>