force-app/main/default/objects/Lead/fields/Referrer_Mobile_phone__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Mobile_phone__c</fullName>
    <label>Referrer - Mobile Phone</label>
    <length>200</length>
    <type>Text</type>
</CustomField>