force-app/main/default/objects/Lead/fields/Referrer_Name_For_Opp__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Name_For_Opp__c</fullName>
    <formula>text(Referrer_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referrer Name For Opp</label>
    <type>Text</type>
</CustomField>