force-app/main/default/objects/Lead/fields/Region_For_Opp__c.field-meta.xml
<CustomField>
    <fullName>Region_For_Opp__c</fullName>
    <formula>TEXT(Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region For Opp</label>
    <type>Text</type>
</CustomField>