force-app/main/default/objects/Lead/fields/Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>Registration_Type__c</fullName>
    <label>Registration Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal Registration</fullName>
                <default>true</default>
                <label>Internal Registration</label>
            </value>
            <value>
                <fullName>External Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>