force-app/main/default/objects/Lead/fields/Relationship_Channel__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Channel__c</fullName>
    <label>Relationship Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>F2F (client’s office)</fullName>
            </value>
            <value>
                <fullName>F2F (eNett office, other event)</fullName>
            </value>
            <value>
                <fullName>Remote (non face to face)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>