force-app/main/default/objects/Lead/fields/Reminder_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Trigger__c</fullName>
    <label>Reminder Trigger</label>
    <type>DateTime</type>
</CustomField>