force-app/main/default/objects/Lead/fields/rTDevName__c.field-meta.xml
<CustomField>
    <fullName>rTDevName__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <label>Record Type Developer Name</label>
    <type>Text</type>
</CustomField>