force-app/main/default/objects/Lead/fields/Send_14_Day_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_14_Day_Email__c</fullName>
    <formula>if((NOW() - Reminder_Trigger__c &gt; 14) &amp;&amp; (NOW() - Reminder_Trigger__c &lt; 21 &amp;&amp; ISBLANK(X14_Day_Email_Sent__c)), true, false)</formula>
    <label>Send 14 Day Email</label>
    <type>Checkbox</type>
</CustomField>