force-app/main/default/objects/Lead/fields/Send_21_Day_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_21_Day_Email__c</fullName>
    <formula>if((NOW() - Reminder_Trigger__c &gt; 21) &amp;&amp; ISBLANK(X21_Day_Email_Sent__c), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send 21 Day Email</label>
    <type>Checkbox</type>
</CustomField>