force-app/main/default/objects/Lead/fields/Send_2_Day_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_2_Day_Email__c</fullName>
    <formula>if((NOW() - Reminder_Trigger__c &gt; 2) &amp;&amp; (NOW() - Reminder_Trigger__c &lt; 7) &amp;&amp; ISBLANK(X2_Day_Email_Sent__c), true, false)</formula>
    <label>Send 2 Day Email</label>
    <type>Checkbox</type>
</CustomField>