force-app/main/default/objects/Lead/fields/Trading_As__c.field-meta.xml
<CustomField>
    <fullName>Trading_As__c</fullName>
    <label>Trading As</label>
    <length>50</length>
    <type>Text</type>
</CustomField>