force-app/main/default/objects/Lead/fields/X14_Day_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>X14_Day_Email_Sent__c</fullName>
    <label>14 Day Email Sent</label>
    <type>Date</type>
</CustomField>