force-app/main/default/objects/Lead/fields/X21_Day_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>X21_Day_Email_Sent__c</fullName>
    <label>21 Day Email Sent</label>
    <type>Date</type>
</CustomField>