force-app/main/default/objects/Lead/fields/X2_Day_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>X2_Day_Email_Sent__c</fullName>
    <label>2 Day Email Sent</label>
    <type>Date</type>
</CustomField>