force-app/main/default/objects/Lead/recordTypes/Channel_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Channel_Agreement</fullName>
    <active>true</active>
    <businessProcess>Leads eNett</businessProcess>
    <description>eNett technology partners e.g: Python</description>
    <label>Channel Agreement</label>
</RecordType>