force-app/main/default/objects/Lead/recordTypes/Customer.recordType-meta.xml
<RecordType>
    <fullName>Customer</fullName>
    <active>true</active>
    <businessProcess>Leads eNett</businessProcess>
    <description>eNett Customer using our products - customer can be travel or corporate</description>
    <label>Customer</label>
</RecordType>