force-app/main/default/objects/Lead/recordTypes/Referrer.recordType-meta.xml
<RecordType>
    <fullName>Referrer</fullName>
    <active>true</active>
    <businessProcess>Leads eNett</businessProcess>
    <description>A Company (eNett client or non eNett client) refers eNett products to other companies.</description>
    <label>Referrer</label>
</RecordType>