force-app/main/default/objects/Lead/recordTypes/Service_Provider.recordType-meta.xml
<RecordType>
    <fullName>Service_Provider</fullName>
    <active>true</active>
    <businessProcess>Leads eNett</businessProcess>
    <description>A financial services provider. Typically, a payment intermediary will acquire and fund eNett on behalf of a client. Current service providers are Adyen and Digital River and Sceptre</description>
    <label>Service Provider</label>
</RecordType>